logs/done.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/done'...
Compiling './lib/python3.5/site-packages/done/Commands.py'...
***   File "./lib/python3.5/site-packages/done/Commands.py", line 34
    print "added tasks..."
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/done/Tasks.py'...
***   File "./lib/python3.5/site-packages/done/Tasks.py", line 39
    print "\t *", self
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/done/done.py'...
***   File "./lib/python3.5/site-packages/done/done.py", line 32
    except Commands.ArgError, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/done/termcolor.py'...
***   File "./lib/python3.5/site-packages/done/termcolor.py", line 110
    print 'Current terminal type: ', os.getenv('TERM')
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/done-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/parsedatetime'...
Compiling './lib/python3.5/site-packages/parsedatetime/parsedatetime.py'...
***   File "./lib/python3.5/site-packages/parsedatetime/parsedatetime.py", line 255
    print '_buildTime: [%s][%s][%s]' % (quantity, modifier, units)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/parsedatetime/parsedatetime_consts.py'...
***   File "./lib/python3.5/site-packages/parsedatetime/parsedatetime_consts.py", line 1065
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/parsedatetime/t2.py'...
***   File "./lib/python3.5/site-packages/parsedatetime/t2.py", line 25
    print len(items), items
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sql_interp'...
Listing './share'...
Listing './share/python-wheels'...
